create send message api nad get message api and create send message screen
